# LCA-Skills

./: README.md  pyproject.toml
skills/brightway2/: SKILL.md  skill.json
skills/greet/: SKILL.md  skill.json
skills/lca-data-quality/: SKILL.md  skill.json
skills/lca-iso-standards/: SKILL.md  skill.json
skills/lca-reporting/: SKILL.md  skill.json
skills/openlca-cli/: SKILL.md  skill.json
skills/openlca-ipc/: SKILL.md  skill.json
skills/openlca-mcp/: SKILL.md  skill.json
